docs/assets/css/styles.scss
---
---

@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');


$font-stack: Helvetica, sans-serif;
$font-primary-color: #dcd7c9;
$bg-color: #171717;

.luckiest-guy-regular {
  font-family: "Luckiest Guy", cursive;
  font-weight: 400;
  font-style: normal;
}

.noto-sans-regular {
  font-family: "Noto Sans", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-weight: 600;
  font-variation-settings: "width" 100;
}

html {
    font-size: 16px;
}

body {
  font: 100% $font-stack;
  color: $font-primary-color;
  background-color: $bg-color;
  text-align: center;

  header {
	color: $font-primary-color;
	text-align: center;
	padding-top: 0.1rem;
	padding-bottom: 0.1rem;

	h1 {
        margin-block-start: 0.25em;
        margin-block-end: 0.25em;
    }
  }

  footer {
	color: $font-primary-color;
	text-align: center;
  }

  section {
  }
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    column-gap: 10px;
    row-gap: 20px;
    max-width: 1420px;
    margin: 0.5rem auto;
}

.flex-header {
    width: 100%;
}

.no-header {
    display: none
}

.no-footer {
    display: none
}

.flex-footer {
    justify-content: right;
    width: 100%;
}

.img-signature {
    height: auto;
    max-width: 150px;
}

.flex-item {
    justify-items: stretch;
    span.tile-title {
        display: block;
        font-size: 18px;
        padding-bottom: 0.2em;
    }
    img.tile-image {
      width: 346.36px;
      height: 201.41px;
      object-fit: cover;
      display: block;
    }
}

@media (min-width: 320px) {
  h1, h2, h3, p {
    font-size: 2.35rem;
  }
}
@media (min-width: 734px) {
  h1, h2, h3, p {
    font-size: 3.5rem;
  }
}
@media (min-width: 1024px) {
  h1, h2, h3, p {
    font-size: 3.8rem;
  }
}

#whatsapp-page {
    margin: 0.5rem auto;

    #survey-zone, #links-zone {
        margin-bottom: 30px;
    }

    .zone-title {
        position: relative;

        padding-top:5px;
        padding-bottom:5px;
        padding-left:10px;
        padding-right:10px;
        margin:6px;

        font-size:26px;
        line-height:26px;
        color:#000000;

        background:#ffd800;
        border:0px;
        border-radius:6px;
        display:flex;

        vertical-align: middle;
    }

    .event-item,
    .links-item {
        position: relative;

        padding:5px;
        margin:6px;
        background:#1e1e1e;
        border:1px solid #1e1e1e;
        border-radius:6px;
        display:flex;

        .event-item-text,
        .links-item-text {
            padding:5px;
            padding-right: 20px;
            font-size:16px;
            color:#dcd7c9;
            border:none;
            outline:none;
        }

        .links-item {
            text-align: left;
        }

        .links-item-text {
            text-align: left;
        }

        .event-item-btn,
        .links-item-btn {
            position: absolute;
            right: 10px;

            padding:4px;
            background:#ffd800;
            color:#fff;
            font-size:18px;
            border:none;
            outline:none;
            border-radius:6px;
            cursor: pointer;
        }
    }

    .copyable {

        button.copyable-btn {
            color: #000000;
        }

        button.copyable-btn:active {
            background:#f39c12;

        }

        button.copyable-btn:before {
            content: "Copied";
            position: absolute;
            color: #000000;
            top:5px;
            right:50px;
            background:#f39c12;
            padding:8px 10px;
            border-radius: 20px;
            font-size:15px;
            display:none;
        }

        button.copyable-btn:after {
            content: "";
            position: absolute;
            top:-20px;
            right:25px;
            width:10px;
            height:10px;
            background:#5c81dc;
            transform:rotate(45deg);
            display:none;
        }

        .active button.copyable-btn:before,
        .active button.copyable-btn:after {
            display:block
        }

    }
}

